crates/ox-kernel/tests/compile_fail/oxpath_rejects_hyphen.rs
use ox_kernel::oxpath;

fn main() {
    let _p = oxpath!("gate", "bad-name", "model");
}
